package model;

public enum PriorityLevel {
    LOW,
    MEDIUM,
    HIGH
}
